# pproxy

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  pproxy-example.toml  pproxy-example.yaml  pproxy.toml
.github/workflows/: rust.yml
src/: blocklist.rs  config.rs  error.rs  geo.rs  main.rs  management.rs  proxy.rs  server.rs  service.rs  templates.rs  utils.rs
src/management/: mod.rs  utils.rs
src/management/forms/: control.rs
src/management/handlers/: control.rs
src/management/monitoring/: monitor.rs
src/management/templates/: mod.rs  templates.rs
src/proxy/: blocklist.rs  geo.rs  mod.rs  service.rs  tls.rs  upstream.rs  utils.rs  waf.rs
static/css/: output.css
static/js/: fa.js
templates/: control.html  error.html  head.html  public.html
