[package]
name = "pproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
pingora = { version = "0.6.0", features = ["lb", "default", "rustls", "proxy", ] }
async-trait = "0.1.89"
log = "0.4.28"
tokio = { version = "1.48.0", features = ["full"]}
clap = {version = "4.5.53", features = ["env", "default", "derive"]}
dotenvy = "0.15.7"
tracing = { version = "0.1.41", features = ["async-await"]}
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "local-time", "time"] }
thiserror = "2.0.17"
