[package]
name = "pproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
pingora = { version = "0.7.0", features = ["lb", "default", "openssl", "proxy"] }
async-trait = "0.1.89"
log = "0.4.29"
tokio = { version = "1.49.0", features = ["full"]}
clap = {version = "4.5.57", features = ["env", "default", "derive"]}
dotenvy = "0.15.7"
tracing = { version = "0.1.44", features = ["async-await"]}
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "local-time", "time"] }
thiserror = "2.0.18"
askama = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
time = "0.3.46"
itertools = "0.14.0"
reqwest = { version = "0.13.1", features = ["json"] }
ipnetwork = {version = "0.21.1", features = ["default", "serde"]}
config = "0.15.19"
num_cpus = "1.17.0"
serde_json = "1.0.149"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
axum = "0.8.8"
regex = "1.12.2"
url = "2.5.8"
